forgot to align main corrected

--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ main {
     display: flex;
     gap: 25px;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 nav button {
